# q-bert

./: LICENSE  README.md  q-bert.cabal
src/: Control.hs  Main.hs  Model.hs  View.hs
src/Model/: Board.hs  Player.hs  Score.hs
