name:                q-bert
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Daniel Tan
maintainer:          danielytan1@gmail.com
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable q-bert
  main-is:             Main.hs
  build-depends:       base >=4.9, 
                       random >=1.1 && <1.2,
                       containers,
                       vty, 
                       brick
  hs-source-dirs:      src
  other-modules:       View, 
                       Control,
                       Model, 
                       Model.Board,
                       Model.Score,
                       Model.Player
		       
  default-language:    Haskell2010
  ghc-options:       -W -threaded

test-suite tests
  default-language: Haskell98
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  ghc-options:       -W -threaded
  main-is:           Test.hs
  build-depends:     base >=4.9, process
